B&L QA/objects/Annual_Evaluation__c.object
<CustomObject>
    <fields>
        <fullName>Account_Profile__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Profile</label>
        <referenceTo>Account_Profile__c</referenceTo>
        <relationshipLabel>Snapshot Annual Evals / Surgical Case Breakdown</relationshipLabel>
        <relationshipName>Annual_Evaluations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Goal_Number_Of_Cataract_Evals__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Goal # Cataract Evals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Goal_Number_Of_Femto__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Goal # Femto</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Goal_Number_Of_Monofocal_Cases__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Goal # Monofocal Cases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Goal_Number_Of_Premium_Cases__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Goal # Premium Cases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Goal_Number_Of_Toric_Cases__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Goal # Toric Cases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Goal_Number_Of_Total_Cataract_Cases__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Goal # Total Cataract Cases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Of_Cataract_Evals__c</fullName>
        <defaultValue>0</defaultValue>
        <label># Cataract Evals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Of_Femto__c</fullName>
        <defaultValue>0</defaultValue>
        <label># Femto</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Of_Monofocal_Cases__c</fullName>
        <defaultValue>0</defaultValue>
        <label># Monofocal Cases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Of_Premium_Cases__c</fullName>
        <defaultValue>0</defaultValue>
        <label># Premium Cases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Of_Toric_Cases__c</fullName>
        <defaultValue>0</defaultValue>
        <label># Toric Cases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Of_Total_Cataract_Cases__c</fullName>
        <defaultValue>0</defaultValue>
        <label># Total Cataract Cases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Annual Evaluation</label>
    <nameField>
        <displayFormat>EVAL - {0000000000}</displayFormat>
        <label>Snapshot Annual Evals/Surgical Case Brea</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Annual Evaluations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>